--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "name": "performance-foxfooding-ext",
   "description": "Crowd-sourced Firefox Profiling.",
   "author": "Quantum Flow <quantum-flow@mozilla.org>",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "config": {
     "firefox": "nightly"
   },
   "license": "MPL-2.0",
   "scripts": {
     "start": "web-ext run --source-dir=dist --firefox=$npm_package_config_firefox --firefox-profile=./.profile --keep-profile-changes --browser-console",
-    "dev": "webpack --progress --colors --watch",
+    "dev": "webpack --progress --colors --display-optimization-bailout --watch",
     "sign": "npm run build && web-ext sign --source-dir=dist --api-key=$JWT_ISSUER --api-secret=$JWT_SECRET && mv web-ext-artifacts/*.xpi performance_foxfooding.xpi",
     "build": "npm run clean && NODE_ENV=production webpack",
     "clean": "rm -rf dist",
@@ -18,9 +18,9 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.0.1",
-    "eslint": "^3.19.0",
-    "web-ext": "^1.8.1",
-    "webpack": "^2.6.1"
+    "eslint": "^4.2.0",
+    "web-ext": "^1.10.1",
+    "webpack": "^3.2.0"
   },
   "dependencies": {
     "pako": "^1.0.5",
