--- a/static/manifest.json
+++ b/static/manifest.json
@@ -2,7 +2,8 @@
   "manifest_version": 2,
   "name": "Performance Foxfooding",
   "description": "Crowd-sourced Firefox Profiling WebExtension.",
-  "version": "0.0.22",
+  "homepage_url": "https://github.com/digitarald/performance-foxfooding-ext",
+  "version": "0.0.23",
   "permissions": [
     "geckoProfiler",
     "storage",
